test/fixtures/hello-cloud/network_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-network-policy
spec:
  podSelector: {}
  ingress:
    - {}
  policyTypes:
    - Ingress
