test/fixtures/hello-cloud/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redis
    app: hello-cloud
spec:
  ports:
  - port: 6379
    targetPort: redis
  selector:
    name: redis
---
kind: PersistentVolumeClaim
apiVersion: v1
metadata:
  name: hello-cloud-redis
  labels:
    name: redis
    app: hello-cloud
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 100M
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  progressDeadlineSeconds: 20
  template:
    metadata:
      labels:
        name: redis
        app: hello-cloud
    spec:
      containers:
      - name: master
        image: redis:3.2.6-alpine
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - mountPath: /data
          name: redis-data
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: hello-cloud-redis
