test/fixtures/hello-cloud/stateful_set.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: nginx-ss
spec:
  serviceName: "nginx-ss"
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-cloud
        name: nginx-ss
    spec:
      containers:
      - name: nginx
        image: gcr.io/google_containers/nginx-slim:0.8
        command: ["sleep", "40"]
        ports:
        - containerPort: 80
