test/fixtures/hello-cloud/unmanaged-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: unmanaged-pod-0
  annotations:
    krane.shopify.io/timeout-override: 60s
  labels:
    type: unmanaged-pod
    name: unmanaged-pod-0
    app: hello-cloud
spec:
  activeDeadlineSeconds: 60
  restartPolicy: Never
  containers:
    - name: hello-cloud
      image: busybox
      imagePullPolicy: IfNotPresent
      command: ["sh", "-c", "echo 'Hello from the command runner!' && test 1 -eq 1"]
